[package]
name = "elven-nft-minter"
version = "1.11.0"
authors = ["Julian Ćwirko <julian.io>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.38.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.38.0"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
