[package]
name = "elven-nft-minter"
version = "1.12.0"
authors = ["Julian Ćwirko <julian.io>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.39.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.39.2"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
