[package]
name = "elven-nft-minter"
version = "1.13.0"
authors = ["Julian Ćwirko <julian.io>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.41.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.41.2"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
