[package]
name = "elven-nft-minter-wasm"
version = "1.9.0"
authors = ["Julian Ćwirko <julian.io>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.elven-nft-minter]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.34.1"

[dependencies.elrond-wasm-output]
version = "0.34.1"
features = ["wasm-output-mode"]

[workspace]
members = ["."]
