[package]
name = "elven-nft-minter-wasm"
version = "1.13.0"
authors = ["Julian Ćwirko <julian.io>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.elven-nft-minter]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.42.0"

[workspace]
members = ["."]
